--- a/layouts/partials/events.html
+++ b/layouts/partials/events.html
@@ -1,13 +1,38 @@
-<ul class="mw9  ph3 ph4-l pv2" >
+<ul class="pl3 pl5-m pl6-l pv5 flex flex-end w-50 ml6 flex-column" >
   {{ range .Site.Data.Events.Item }}
-    <li class="topic-menu-item flex flex-column">
-      <h2>{{ .Title }}</h2>
-      <h3>{{ .EventTitle }}</h3>
-      <div>
-        {{ .EventLocation }}
-      </div>
-      <div>
-          {{ .EventDate }}
+    <li class="topic-menu-item flex flex-column
+      mb4
+      avenir
+    ">
+      <h3 class="f5 fw4 mb2 hot-pink lh-solid" >{{ .EventTitle }}</h3>
+      <h2 class="light-pink
+        f5
+        fw4
+        mb3
+        tracked
+        lh-title
+        mb1
+      ">{{ .Title }}</h2>
+      
+      
+      <div class="flex mt1 mb2 f6 pink">
+
+        <span class="mr4 ttu">
+          <span class="event-icon mr1">
+            {{ partial "icons/icon-calendar.html" . }}
+          </span>
+
+            {{ .EventDate }}
+        </span>
+
+        <span class="ttu">
+          <span class="event-icon mr1">
+            {{ partial "icons/icon-location.html" . }}
+          </span>
+          {{ .EventVenue }}
+          {{ .EventLocation }}
+        </span>
+
       </div>
     </li>
   {{ end }}
