Event section styles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -158,7 +158,8 @@
 
 </section>
 
-<section id="events-section" class="bg-hot-pink white dn">
+<section id="events-section" class="bg-black white pt4">
+  <h1 class="f-headline pl5 pt4 dn">Engagements</h1>
   {{ partial "events.html" . }}
 </section>
 
