Change black to near-black

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 
 {{ define "main" }}
-<section id="about-section" class="bg-black 
+<section id="about-section" class="bg-near-black 
   pt4
   pb6
   fw2
@@ -27,7 +27,7 @@
   ">Operates at the intersection of <span class="light-pink nowrap-ns">design & technology</span>, <span class="light-red nowrap-ns">behavioral sciences</span>, and <span class="light-pink">society</span>.</p>
 </section>
 
-<section class="bg-hot-pink black
+<section class="bg-hot-pink near-black
   ph5-ns ph4
   pt6-ns pt5
   pb6
