Add social icons to team cards

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -94,6 +94,7 @@
         ">
           <p>{{ .Bio }}</p>
         </div> 
+        {{ partial "team-social.html" . }}          
       </div>  
     {{ end }}
   </article>
@@ -132,6 +133,7 @@
       ">
         <p>{{ .Bio }}</p>      
       </div> 
+      {{ partial "team-social.html" . }}
     </div>
     {{ end }}
   </article>
