Add project section to homepage. Move content.
Experiment with suffling content around on the homepage.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,6 +48,14 @@
     We employ dynamic systems theories, analyses of social structures, and design to transform companies, non-profits, universities, and societies.</p>
 </section>
 
+{{ partial "project-section.html" . }}
+
+
+<section id="events-section" class="bg-black white pt4">
+    <h1 class="f-headline pl5 pt4 dn">Engagements</h1>
+    {{ partial "events.html" . }}
+  </section>
+
 <section id="team-section" class="team-section bg-light-pink
   flex flex-column
   pb5 pb0-l
@@ -143,7 +151,7 @@
     bg-light-pink
     ph3 ph5-ns
     pt6-l 
-    pb5
+    pb6
     overflow-auto-l
   ">
     <p class="f2 f1-m f-subheadline-l
