--- a/layouts/index.html
+++ b/layouts/index.html
@@ -158,9 +158,10 @@
 
 </section>
 
+
 <section id="events-section" class="bg-black white pt4">
   <h1 class="f-headline pl5 pt4 dn">Engagements</h1>
-  {{ partial "events.html" . }}
+  {{ partial "event-item.html" . }}
 </section>
 
 {{ end }}
