--- a/layouts/partials/event-item.html
+++ b/layouts/partials/event-item.html
@@ -1,37 +1,54 @@
-<ul class="pl3 pl5-m pl6-l pv5 flex flex-end w-50 ml6 flex-column" >
+<ul class="pl5-m pl6-l pv5 
+  flex flex-column 
+  ml4-l
+  w-70-l
+
+  ">
   {{ range .Site.Data.Events.Item }}
-    <li class="topic-menu-item flex flex-column
-      mb4
+    <li class="topic-menu-item 
+      flex flex-column
+      mb3 mb4-ns
+      pa4
       avenir
+      pr6
     ">
-      <h3 class="f5 fw4 mb2 hot-pink lh-solid" >{{ .EventTitle }}</h3>
+      <h3 class="f5 f4-m fw4 mb2 mb3-m hot-pink lh-solid" >{{ .EventTitle }}</h3>
       <h2 class="light-pink
-        f5
+        f5 f4-ns
         fw4
-        mb3
+        mb3 mb4-m
         tracked
         lh-title
         mb1
       ">{{ .Title }}</h2>
       
       
-      <div class="flex mt1 mb2 f6 pink">
+      <div class="flex flex-column flex-row-ns mt1 mb2 
+        f6 f5-ns
+        pink
+        ">
 
-        <span class="mr4 ttu">
-          <span class="event-icon mr1">
+        <div class="flex 
+          mb2 mbo-ns 
+          mr4 
+          ttu lh-solid
+          ">
+          <span class="event-icon mr2 mr3-ns ">
             {{ partial "icons/icon-calendar.html" . }}
           </span>
 
-            {{ .EventDate }}
-        </span>
+          <span>{{ .EventDate }}</span>
+        </div>
 
-        <span class="ttu">
-          <span class="event-icon mr1">
+        <div class="flex ttu">
+          <span class="event-icon mr2 mr1-ns">
             {{ partial "icons/icon-location.html" . }}
           </span>
-          {{ .EventVenue }}
-          {{ .EventLocation }}
-        </span>
+          <span>
+              {{ .EventVenue }}
+              {{ .EventLocation }}    
+          </span>
+        </div>
 
       </div>
     </li>
