--- a/layouts/partials/event-section.html
+++ b/layouts/partials/event-section.html
@@ -1,5 +1,5 @@
-<section id="events-section" class="bg-black white pt4">
-    <h1 class="f-headline pl5 pt4 dn">Engagements</h1>
+<section id="events-section" class="near-black white pt4">
+    <h1 class="f-headline pt4 dn">Engagements</h1>
     {{ partial "event-item.html" . }}
   </section>
   
