--- a/layouts/partials/event-item.html
+++ b/layouts/partials/event-item.html
@@ -1,23 +1,25 @@
-<article>
+<article class="bodoni mb3 mb2-m">
   <h3 class="
-    f5 f4-l
+    f5
     fw4 
-    mb2 mb3-m hot-pink 
-    lh-title-m lh-solid
+    mb2 pink
+    lh-title
+    avenir
   " >{{ .EventTitle }}</h3>
   
-  <h2 class="light-pink
+  <h2 class="white-90
   f5 f4-ns
   fw4
-  mb3 mb4-m
+  mb3
   tracked
   lh-title
   mb1
   ">{{ .Title }}</h2>   
   
   <div class="flex flex-column flex-row-ns mt1 mb2 
-  f6 f5-ns
-  pink
+  f6
+  white-80
+  avenir
   ">
   
     <div class="flex 
