CC Events Timeline (#7)
* Remove copy pasta icons

* Add static icons

* Add icon partials

* Engagement data

* Styling engagement list feed

* Event section styles

* Rename events.html to event-item.html

* Move event section into its own partial

Include on the homepage.

* Style adjustments

* Fix event data

* [Refactor] Event templates

* Reset definition list defaults

* cleanup event data

* Style adustments to event item and feed

* [Fixup] padding off in team section title

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -152,14 +152,12 @@
     measure-narrow
     tracked-tight-m
     w-100 w-50-l
-    pl3
+    pl3-l
     avenir">to build models for near and <span class="nowrap wrap-ns">far futures</span>.</p>
   </div>
 
 </section>
 
-<section id="events-section" class="bg-hot-pink white dn">
-  {{ partial "events.html" . }}
-</section>
+{{ partial "event-section.html" .}}
 
 {{ end }}
