--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,6 +22,9 @@ a:hover {
 
 ul, 
 ol,
+dl, 
+dd,
+dt,
 p,
 h1, 
 h2, 
@@ -97,4 +100,11 @@ img {
   .team-section {
     background-color: white;    
   }
+}
+
+
+.event-icon {
+  height: 16px;
+  width: 16px;
+  display: inline-block;
 }
