[Fixup] alignment/spacing

--- a/layouts/partials/event-feed.html
+++ b/layouts/partials/event-feed.html
@@ -9,8 +9,7 @@
   <dt class="
     f2-ns f4 
     mb3 lh-solid
-    ml3 ml5-m
-    mb4
+    mb3
     pb3
     bb
     b--light-pink
@@ -23,9 +22,9 @@
 
   <dt class="
     f2-ns f4 
-    mb3 lh-solid
-    ml3 ml5-m
-    mb4
+    mt3 mt5
+    mb3 
+    lh-solid
     pb3
     bb
     b--light-pink
