[Content] Remove pilot from title

--- a/layouts/partials/project-section.html
+++ b/layouts/partials/project-section.html
@@ -12,7 +12,7 @@
         hot-pink
         mb3
         ">
-        Talk to NYC Pilot</h1>
+        Talk to NYC</h1>
     </header>
     
     <div class="project-content 
