Add a comma after event venue

--- a/layouts/partials/event-item.html
+++ b/layouts/partials/event-item.html
@@ -39,8 +39,7 @@
         {{ partial "icons/icon-location.html" . }}
       </span>
       <span>
-          {{ .EventVenue }}
-          {{ .EventLocation }}    
+          {{ .EventVenue }}, {{ .EventLocation }}    
       </span>
     </div>
   
