--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,5 +1,5 @@
 {{ if .Site.Menus.main }}
-<nav class="pv3 ph3 ph4-ns" role="navigation">
+<nav class="pv3 ph3 ph4-ns dn" role="navigation">
   <div class="flex-l justify-between items-center center">
         <ul class="pl0 mr3">
           {{ range .Site.Menus.main }}
